internal/xds/translator/testdata/out/xds-ir/ratelimit-shared-and-unshared.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/gateway_envoyproxy_io
    routes:
    - match:
        pathSeparatedPrefix: /foo
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-1/rule/0
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: default/policy-for-route/rule/0
              descriptorValue: default/policy-for-route/rule/0
          - headerValueMatch:
              descriptorKey: rule-0-match-0
              descriptorValue: rule-0-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: one
        - actions:
          - genericKey:
              descriptorKey: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
              descriptorValue: default/policy-for-route
          - headerValueMatch:
              descriptorKey: rule-0-match-0
              descriptorValue: rule-0-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: two
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        pathSeparatedPrefix: /bar
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-2
              namespace: default
      name: httproute/default/httproute-2/rule/0/match/0/gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-2/rule/0
        rateLimits:
        - actions:
          - genericKey:
              descriptorKey: default/policy-for-route/rule/0
              descriptorValue: default/policy-for-route/rule/0
          - headerValueMatch:
              descriptorKey: rule-0-match-0
              descriptorValue: rule-0-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: one
        - actions:
          - genericKey:
              descriptorKey: httproute/default/httproute-2/rule/0/match/0/gateway_envoyproxy_io
              descriptorValue: default/policy-for-route
          - headerValueMatch:
              descriptorKey: rule-0-match-0
              descriptorValue: rule-0-match-0
              expectMatch: true
              headers:
              - name: x-user-id
                stringMatch:
                  exact: two
        upgradeConfigs:
        - upgradeType: websocket
